# Auth-service

./: Dockerfile  compose.yaml  pyproject.toml
auth-service/: main.py
